[tool.poetry]
name = "printer"
version = "0.1.0"
description = "The Área 16 standards of stdout and stderr for our CLIs."
authors = ["Jojo <jonas.uliana@pm.me>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
taskipy = "^1.12.2"

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
lint = "ruff check ./printer ./printer"
format = "black ./printer ./printer"
test = "pytest -s -x -vv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
