[tool.poetry]
name = "py-adb"
version = "0.2.0"
description = "A simplistic wrapper for adb OS agnostic."
authors = ["Jojo <jonas.uliana@pm.me>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
commons = {git = "https://github.com/zone016/py-libs.git", subdirectory = "commons"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
black = "^24.2.0"
taskipy = "^1.12.2"
ruff = "^0.4.2"

[tool.pytest.ini_options]
pythonpath = "."

[tool.ruff]
line-length = 79

[tool.taskipy.tasks]
lint = "ruff check ./py_adb ./tests"
format = "black ./py_adb ./tests"
test = "pytest -s -x -vv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
